--- a/App/app/src/main/res/values/colors.xml
+++ b/App/app/src/main/res/values/colors.xml
@@ -7,4 +7,5 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="primary_light_dark">#FF001C7D</color>
 </resources>
