--- a/App/app/src/main/res/layout/fragment_profile.xml
+++ b/App/app/src/main/res/layout/fragment_profile.xml
@@ -26,7 +26,7 @@
         android:layout_alignParentTop="true"
         android:layout_marginStart="158dp"
         android:layout_marginTop="260dp"
-        android:text="Button" />
+        android:text="@string/button" />
 
     <TextView
         android:id="@+id/tvUsername"
