--- a/App/app/src/main/res/layout/fragment_profile.xml
+++ b/App/app/src/main/res/layout/fragment_profile.xml
@@ -21,9 +21,10 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
-        android:layout_marginStart="21dp"
-        android:layout_marginTop="96dp"
+        android:layout_marginStart="25dp"
+        android:layout_marginTop="120dp"
         android:layout_toEndOf="@+id/ivProfile"
+        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
         tools:text="Username" />
 
     <Button
@@ -32,7 +33,37 @@
         android:layout_height="wrap_content"
         android:layout_below="@+id/ivProfile"
         android:layout_alignParentStart="true"
-        android:layout_marginStart="125dp"
+        android:layout_marginStart="39dp"
+        android:layout_marginTop="40dp"
+        android:text="@string/take_image" />
+
+    <Button
+        android:id="@+id/btnGallery"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/ivProfile"
+        android:layout_marginStart="41dp"
         android:layout_marginTop="42dp"
-        android:text="Take Image" />
+        android:layout_toEndOf="@+id/btnTakeImage"
+        android:text="@string/open_gallery" />
+
+    <Button
+        android:id="@+id/btnLogout"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/btnTakeImage"
+        android:layout_alignParentStart="true"
+        android:layout_marginStart="142dp"
+        android:layout_marginTop="44dp"
+        android:text="@string/logout" />
+
+    <TextView
+        android:id="@+id/textView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/tvUsername"
+        android:layout_marginStart="25dp"
+        android:layout_marginTop="11dp"
+        android:layout_toEndOf="@+id/ivProfile"
+        tools:text="Comments Posted: 45" />
 </RelativeLayout>
