--- a/App/app/src/main/res/layout/fragment_show_live_chat.xml
+++ b/App/app/src/main/res/layout/fragment_show_live_chat.xml
@@ -1,14 +1,36 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/ivPoster"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".fragments.ShowLiveChatFragment">
 
-    <!-- TODO: Update blank fragment layout -->
+    <ImageView
+        android:id="@+id/imageView"
+        android:layout_width="wrap_content"
+        android:layout_height="200dp"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
+        android:layout_marginStart="36dp"
+        android:layout_marginTop="58dp"
+        tools:src="@tools:sample/avatars" />
+
     <TextView
+        android:id="@+id/tvTitleChat"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentTop="true"
+        android:layout_marginStart="21dp"
+        android:layout_marginTop="76dp"
+        android:layout_toEndOf="@+id/imageView"
+        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
+        tools:text="TV Title" />
+
+    <androidx.recyclerview.widget.RecyclerView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:text="@string/hello_blank_fragment" />
-
-</FrameLayout>
+        android:layout_below="@+id/imageView"
+        android:layout_marginTop="10dp" />
+</RelativeLayout>
