--- a/App/app/src/main/res/layout/fragment_show_live_chat.xml
+++ b/App/app/src/main/res/layout/fragment_show_live_chat.xml
@@ -8,7 +8,7 @@
     tools:context=".fragments.ShowLiveChatFragment">
 
     <ImageView
-        android:id="@+id/imageView"
+        android:id="@+id/ivLivechatPoster"
         android:layout_width="wrap_content"
         android:layout_height="200dp"
         android:layout_alignParentStart="true"
@@ -24,13 +24,14 @@
         android:layout_alignParentTop="true"
         android:layout_marginStart="21dp"
         android:layout_marginTop="76dp"
-        android:layout_toEndOf="@+id/imageView"
+        android:layout_toEndOf="@+id/ivLivechatPoster"
         android:textAppearance="@style/TextAppearance.AppCompat.Display1"
         tools:text="TV Title" />
 
     <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/rvComments"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_below="@+id/imageView"
+        android:layout_below="@+id/ivLivechatPoster"
         android:layout_marginTop="10dp" />
 </RelativeLayout>
