--- a/App/app/src/main/res/layout/fragment_show_search.xml
+++ b/App/app/src/main/res/layout/fragment_show_search.xml
@@ -6,7 +6,7 @@
     tools:context=".fragments.ShowSearchFragment">
 
     <EditText
-        android:id="@+id/etSearchFrag"
+        android:id="@+id/etShowSearch"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentStart="true"
@@ -20,8 +20,9 @@
         android:maxLines="1" />
 
     <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/rvShowList"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_below="@+id/etSearchFrag"
+        android:layout_below="@+id/etShowSearch"
         android:layout_marginTop="10dp" />
 </RelativeLayout>
