--- a/App/app/src/main/res/layout/fragment_show_details.xml
+++ b/App/app/src/main/res/layout/fragment_show_details.xml
@@ -21,6 +21,7 @@
         android:layout_width="200dp"
         android:layout_height="300dp"
         android:layout_marginStart="10dp"
+        android:layout_marginTop="10dp"
         android:contentDescription="Show Poster Image"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/toolbar"
@@ -76,27 +77,37 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
-        android:layout_marginTop="36dp"
+        android:layout_marginTop="16dp"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/buttonFollow"
+        app:layout_constraintTop_toBottomOf="@+id/spinnerSeasons"
         tools:text="5 seasons" />
 
     <TextView
         android:id="@+id/textViewEpisodeCount"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="36dp"
+        android:layout_marginTop="16dp"
+        android:layout_marginEnd="16dp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/textViewSeasonCount"
-        app:layout_constraintTop_toBottomOf="@+id/buttonFollow"
+        app:layout_constraintTop_toBottomOf="@+id/spinnerSeasons"
         tools:text="143 episodes" />
+
+    <Spinner
+        android:id="@+id/spinnerSeasons"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="32dp"
+        android:spinnerMode="dropdown"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/buttonFollow" />
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recyclerViewEpisodes"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textViewSeasonCount" />
+        app:layout_constraintStart_toStartOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
