--- a/App/app/src/main/res/layout/activity_startup.xml
+++ b/App/app/src/main/res/layout/activity_startup.xml
@@ -50,4 +50,14 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/btnStartupLogin" />
 
+    <ImageView
+        android:id="@+id/ivStartupLogo"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="50dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@drawable/spectaclelogo" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
