--- a/App/app/src/main/res/layout/fragment_home.xml
+++ b/App/app/src/main/res/layout/fragment_home.xml
@@ -1,9 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:background="#000C38"
     tools:context=".fragments.HomeFragment">
 
     <androidx.appcompat.widget.Toolbar
@@ -14,9 +15,9 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:titleTextColor="#FFFFFF"
         app:menu="@menu/menu_toolbar"
-        app:title="Spectacle" />
+        app:subtitleTextColor="#FFFFFF"
+        app:titleTextColor="#FFFFFF" />
 
     <TextView
         android:id="@+id/textViewFollowingShows"
@@ -27,6 +28,7 @@
         android:paddingEnd="24dp"
         android:paddingBottom="24dp"
         android:text="Shows You're Following:"
+        android:textColor="#FFFFFF"
         android:textSize="24sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -38,8 +40,7 @@
         android:layout_height="wrap_content"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textViewFollowingShows">
-    </androidx.recyclerview.widget.RecyclerView>
+        app:layout_constraintTop_toBottomOf="@+id/textViewFollowingShows"></androidx.recyclerview.widget.RecyclerView>
 
     <TextView
         android:id="@+id/textViewRecommendedShows"
@@ -50,6 +51,7 @@
         android:paddingEnd="24dp"
         android:paddingBottom="24dp"
         android:text="Recommended Shows"
+        android:textColor="#FFFFFF"
         android:textSize="24sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -62,5 +64,20 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textViewRecommendedShows"></androidx.recyclerview.widget.RecyclerView>
+
+    <ImageView
+        android:id="@+id/ivHomeProfile"
+        android:layout_width="40dp"
+        android:layout_height="40dp"
+        android:layout_marginStart="10dp"
+        android:layout_marginTop="5dp"
+        android:layout_marginBottom="5dp"
+        android:background="@drawable/roundimage"
+        app:layout_constraintBottom_toBottomOf="@+id/toolbar"
+        app:layout_constraintStart_toStartOf="@+id/toolbar"
+        app:layout_constraintTop_toTopOf="@+id/toolbar" />
+    tools:layout_editor_absoluteX="7dp"
+    tools:layout_editor_absoluteY="7dp"
+    tools:src="@tools:sample/avatars" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
