Show details shows shows and seasons and episodes, clicking episode opens new fragment

--- a/App/app/src/main/res/layout/fragment_show_details.xml
+++ b/App/app/src/main/res/layout/fragment_show_details.xml
@@ -72,26 +72,6 @@
         app:layout_constraintTop_toBottomOf="@+id/textViewScore"
         tools:text="Follow" />
 
-    <TextView
-        android:id="@+id/textViewSeasonCount"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="16dp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/spinnerSeasons"
-        tools:text="5 seasons" />
-
-    <TextView
-        android:id="@+id/textViewEpisodeCount"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
-        android:layout_marginEnd="16dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/spinnerSeasons"
-        tools:text="143 episodes" />
-
     <Spinner
         android:id="@+id/spinnerSeasons"
         android:layout_width="match_parent"
@@ -104,10 +84,11 @@
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recyclerViewEpisodes"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/spinnerSeasons" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
