--- a/App/app/src/main/res/values/colors.xml
+++ b/App/app/src/main/res/values/colors.xml
@@ -8,4 +8,5 @@
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
     <color name="primary_light_dark">#FF001C7D</color>
+    <color name="primary_light">#FF0015D7</color>
 </resources>
