--- a/App/app/src/main/res/layout/livechat_incoming.xml
+++ b/App/app/src/main/res/layout/livechat_incoming.xml
@@ -28,27 +28,29 @@
         tools:text="Username" />
 
     <TextView
-        android:id="@+id/textViewLivechatComment"
+        android:id="@+id/textViewChatBody"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@+id/textViewUsername"
         android:layout_alignStart="@id/textViewUsername"
-        android:background="@drawable/message_incoming"
-        android:paddingVertical="12dp"
-        android:paddingHorizontal="16dp"
-        android:elevation="2dp"
-        android:textSize="18dp"
         android:layout_marginTop="5dp"
         android:layout_toEndOf="@+id/imageViewProfileOther"
+        android:background="@drawable/message_incoming"
+        android:elevation="2dp"
+        android:paddingHorizontal="16dp"
+        android:paddingVertical="12dp"
+        android:textSize="18sp"
+        android:textColor="@color/black"
         tools:text="This is a comment for a television show. I think last week's episode was trash." />
 
     <TextView
         android:id="@+id/textViewTimestamp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_above="@+id/textViewLivechatComment"
+        android:layout_above="@+id/textViewChatBody"
         android:layout_marginStart="15dp"
         android:layout_toEndOf="@+id/textViewUsername"
         android:paddingBottom="4dp"
+        android:textSize="11sp"
         tools:text="10m ago" />
 </RelativeLayout>
