--- a/App/app/src/main/res/layout/livechat_outgoing.xml
+++ b/App/app/src/main/res/layout/livechat_outgoing.xml
@@ -15,13 +15,15 @@
         android:layout_alignParentEnd="true"
         android:contentDescription="@string/profile_me"
         android:src="@mipmap/ic_launcher" />
+
     <TextView
         android:id="@+id/textViewTimestamp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginEnd="15dp"
-        android:paddingBottom="4dp"
         android:layout_toStartOf="@+id/imageViewProfileMe"
+        android:paddingBottom="4dp"
+        android:textSize="11sp"
         tools:text="10m ago" />
 
     <TextView
