--- a/App/app/src/main/res/layout/fragment_episode_thread.xml
+++ b/App/app/src/main/res/layout/fragment_episode_thread.xml
@@ -5,10 +5,8 @@
     android:layout_height="match_parent"
     tools:context=".fragments.EpisodeThreadFragment">
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/rvEpisodeThread"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="@string/hello_blank_fragment" />
-
+        android:layout_height="match_parent" />
 </FrameLayout>
