--- a/App/app/src/main/res/layout/fragment_profile.xml
+++ b/App/app/src/main/res/layout/fragment_profile.xml
@@ -26,6 +26,7 @@
         android:layout_marginTop="120dp"
         android:layout_toEndOf="@+id/ivProfile"
         android:textAppearance="@style/TextAppearance.AppCompat.Display1"
+        android:textColor="#FFFFFF"
         tools:text="Username" />
 
     <Button
@@ -66,5 +67,6 @@
         android:layout_marginStart="25dp"
         android:layout_marginTop="11dp"
         android:layout_toEndOf="@+id/ivProfile"
+        android:textColor="#FFFFFF"
         tools:text="Comments Posted: 45" />
 </RelativeLayout>
