--- a/App/app/src/main/res/layout/livechat_incoming.xml
+++ b/App/app/src/main/res/layout/livechat_incoming.xml
@@ -25,6 +25,7 @@
         android:layout_toEndOf="@+id/imageViewProfileOther"
         android:paddingBottom="4dp"
         android:textAppearance="@style/TextAppearance.AppCompat.Body1"
+        android:textColor="#FFFFFF"
         tools:text="Username" />
 
     <TextView
@@ -51,6 +52,7 @@
         android:layout_marginStart="15dp"
         android:layout_toEndOf="@+id/textViewUsername"
         android:paddingBottom="4dp"
+        android:textColor="#FFFFFF"
         android:textSize="11sp"
         tools:text="10m ago" />
 </RelativeLayout>
