--- a/App/app/src/main/res/layout/livechat_outgoing.xml
+++ b/App/app/src/main/res/layout/livechat_outgoing.xml
@@ -23,6 +23,7 @@
         android:layout_marginEnd="15dp"
         android:layout_toStartOf="@+id/imageViewProfileMe"
         android:paddingBottom="4dp"
+        android:textColor="#FFFFFF"
         android:textSize="11sp"
         tools:text="10m ago" />
 
@@ -32,8 +33,8 @@
         android:layout_height="wrap_content"
         android:layout_below="@id/textViewTimestamp"
         android:layout_alignEnd="@id/textViewTimestamp"
-        android:background="@drawable/message_outgoing"
         android:layout_marginTop="5dp"
+        android:background="@drawable/message_outgoing"
         android:elevation="2dp"
         android:padding="8dp"
         android:text="@string/self_live_message"
