--- a/App/app/src/main/res/layout/activity_signup.xml
+++ b/App/app/src/main/res/layout/activity_signup.xml
@@ -42,6 +42,9 @@
         android:ems="15"
         android:inputType="textPersonName"
         android:minHeight="35dp"
+        android:paddingStart="5dp"
+        android:paddingEnd="5dp"
+        android:textColor="#000000"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/btnSignupReturn" />
@@ -66,6 +69,9 @@
         android:ems="15"
         android:inputType="textPassword"
         android:minHeight="48dp"
+        android:paddingStart="5dp"
+        android:paddingEnd="5dp"
+        android:textColor="#000000"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/etSignupUsername" />
@@ -89,6 +95,9 @@
         android:background="@drawable/roundededittext"
         android:ems="15"
         android:minHeight="48dp"
+        android:paddingStart="5dp"
+        android:paddingEnd="5dp"
+        android:textColor="#000000"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/etSignupPassword" />
