--- a/App/app/src/main/res/menu/menu_bottom_navigation.xml
+++ b/App/app/src/main/res/menu/menu_bottom_navigation.xml
@@ -12,7 +12,7 @@
     <item
         android:id="@+id/action_all_shows"
         android:icon="@drawable/ic_all_shows"
-        android:title="@string/all_shows"
+        android:title="@string/search_shows"
         app:showAsAction="always" />
     <item
         android:id="@+id/action_profile"
